force-app/main/default/objects/Agent_Run__c/Agent_Run__c.object-meta.xml
<CustomObject>
    <description>Provides an audit trail for when apex agents run.</description>
    <label>Agent Run</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Agent Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>