force-app/main/default/objects/Agent_Run__c/fields/Agent_Run__c.field-meta.xml
<CustomField>
    <fullName>Agent_Run__c</fullName>
    <description>The Agent(Custom Metadata Type Record) for this run.</description>
    <inlineHelpText>The Agent(Custom Metadata Type Record) for this run.</inlineHelpText>
    <label>Agent Run</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>