force-app/main/default/objects/Agent_Run__c/fields/Completion_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Completion_Tokens__c</fullName>
    <description>Sum of completion (output) tokens across all LLM calls in this run.</description>
    <inlineHelpText>Sum of completion (output) tokens across all LLM calls in this run.</inlineHelpText>
    <label>Completion Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>