force-app/main/default/objects/Agent_Run__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sub-agent nesting depth: 0 for top-level runs, parent depth + 1 for runs started by SubAgentTool.</description>
    <label>Depth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>