force-app/main/default/objects/Agent_Run__c/fields/Final_Output__c.field-meta.xml
<CustomField>
    <fullName>Final_Output__c</fullName>
    <label>Final Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>