force-app/main/default/objects/Agent_Run__c/fields/Finished_At__c.field-meta.xml
<CustomField>
    <fullName>Finished_At__c</fullName>
    <description>Date and Time when the run finished.</description>
    <inlineHelpText>Date and Time when the run finished.</inlineHelpText>
    <label>Finished At</label>
    <type>DateTime</type>
</CustomField>