force-app/main/default/objects/Agent_Run__c/fields/History_Json__c.field-meta.xml
<CustomField>
    <fullName>History_Json__c</fullName>
    <description>Agent conversation history</description>
    <inlineHelpText>Agent conversation history</inlineHelpText>
    <label>History Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>