force-app/main/default/objects/Agent_Run__c/fields/Input_Context__c.field-meta.xml
<CustomField>
    <fullName>Input_Context__c</fullName>
    <label>Input Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>