force-app/main/default/objects/Agent_Run__c/fields/Parent_Run__c.field-meta.xml
<CustomField>
    <fullName>Parent_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Agent Run that spawned this run via SubAgentTool. Null for top-level runs.</description>
    <inlineHelpText>The parent Agent Run that spawned this run as a sub-agent.</inlineHelpText>
    <label>Parent Run</label>
    <referenceTo>Agent_Run__c</referenceTo>
    <relationshipLabel>Child Runs</relationshipLabel>
    <relationshipName>Child_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>