force-app/main/default/objects/Agent_Run__c/fields/Parent_Step__c.field-meta.xml
<CustomField>
    <fullName>Parent_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent run's pending ToolCall step this sub-agent run reports back to when it finishes.</description>
    <inlineHelpText>The parent run's pending SubAgentTool step that is waiting on this run.</inlineHelpText>
    <label>Parent Step</label>
    <referenceTo>Agent_Step__c</referenceTo>
    <relationshipLabel>Sub-Agent Runs</relationshipLabel>
    <relationshipName>Sub_Agent_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>