force-app/main/default/objects/Agent_Run__c/fields/PendingToolCount__c.field-meta.xml
<CustomField>
    <fullName>PendingToolCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pending Tool Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>