force-app/main/default/objects/Agent_Run__c/fields/Prompt_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Tokens__c</fullName>
    <description>Sum of prompt (input) tokens across all LLM calls in this run.</description>
    <inlineHelpText>Sum of prompt (input) tokens across all LLM calls in this run.</inlineHelpText>
    <label>Prompt Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>