force-app/main/default/objects/Agent_Run__c/fields/Prompt_Version__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The Agent_Prompt_Version__c whose system prompt this run executed, stamped at run start. Null when the run fell back to the packaged Agent_Definition__mdt.SystemPrompt__c baseline.</description>
    <inlineHelpText
  >Which prompt version this run actually used.</inlineHelpText>
    <label>Prompt Version</label>
    <referenceTo>Agent_Prompt_Version__c</referenceTo>
    <relationshipLabel>Runs</relationshipLabel>
    <relationshipName>Runs</relationshipName>
    <type>Lookup</type>
</CustomField>