force-app/main/default/objects/Agent_Run__c/fields/Prompt_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Version_Number__c</fullName>
    <description
  >Denormalized copy of Prompt_Version__c.Version_Number__c so run reports need no join and the number survives deletion of the version record.</description>
    <inlineHelpText>Version number of the prompt this run used.</inlineHelpText>
    <label>Prompt Version Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>