force-app/main/default/objects/Agent_Run__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Agent Session (conversation thread) this run is a turn of. Null for one-shot runs.</description>
    <label>Session</label>
    <referenceTo>Agent_Session__c</referenceTo>
    <relationshipLabel>Turns</relationshipLabel>
    <relationshipName>Turns</relationshipName>
    <type>Lookup</type>
</CustomField>