force-app/main/default/objects/Agent_Run__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>Date and Time when the run began.</description>
    <inlineHelpText>Date and Time when the run began.</inlineHelpText>
    <label>Started At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>