force-app/main/default/objects/Agent_Run__c/fields/Total_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Total_Tokens__c</fullName>
    <description>Sum of total tokens across all LLM calls in this run.</description>
    <inlineHelpText>Sum of total tokens across all LLM calls in this run.</inlineHelpText>
    <label>Total Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>