force-app/main/default/objects/Agent_Run__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <description>What type of trigger caused the agent to run?</description>
    <inlineHelpText>What type of trigger caused the agent to run?</inlineHelpText>
    <label>Trigger Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>UI</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>