force-app/main/default/objects/Agent_Run__c/fields/Turn_Number__c.field-meta.xml
<CustomField>
    <fullName>Turn_Number__c</fullName>
    <description>1-based position of this run within its Agent Session. Null for one-shot runs.</description>
    <label>Turn Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>